trunk/Archive2/6c/26382bb39ec306/output
main.cpp:11:1: error: 'table' does not name a type
 table& set_function( std::true_type, T&& key, TFx&& fx ) {
 ^
main.cpp: In function 'int main()':
main.cpp:27:25: error: 'something' was not declared in this scope
     something( breaking );
                         ^
